--- a/src/global.css
+++ b/src/global.css
@@ -11,4 +11,8 @@
   background-repeat: no-repeat;
   min-height: 100vw;
   font-family: sans-serif;
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  flex-wrap: wrap;
 }
